Added planks from autumn logs.

--- a/src/main/resources/assets/extrabiomesautumnwoods/lang/en_US.lang
+++ b/src/main/resources/assets/extrabiomesautumnwoods/lang/en_US.lang
@@ -18,7 +18,7 @@ tile.extrabiomes.autumn.sapling.2.name=Vermillion Autumn Sapling
 tile.extrabiomes.autumn.sapling.3.name=Citrine Autumn Sapling
 
 tile.extrabiomes.autumn.log.0.name=Autumn Log
-tile.extrabiomes.autumn.planks.0.name=Autumn Wood Log
+tile.extrabiomes.autumn.planks.0.name=Autumn Wood Plank
 
 tile.extrabiomes.autumn.stairs.0.name=Autumn Stairs
 tile.extrabiomes.autumn.woodslab.0.name=Autumn Slab
